# binary-and-back

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: CustomTargetsImport.cmake
src/: CMakeLists.txt  main.c
src/bab/: bab.c  bab.h
src/bab/sdl_impl/: sdl_impl.c  sdl_impl.h
src/utils/: endian.c  endian.h
